--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "moment": "^2.24.0",
     "react": "^16.3.2",
     "react-calendar-timeline": "^0.25.4",
-    "react-dom": "16.3.2",
+    "react-dom": ">=16.3.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
